InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderContactLicense__c/vlocity_ins__ProviderContactLicense__c.object-meta.xml
<CustomObject>
    <description>Represents license credentials issued to an individual service provider such as a physician, dentist, nurse practioner or other health provider. A license authorizes the individual to provide services within a jurisdiction such as a state or country. Master-detail child object of a Provider Contact.</description>
    <label>Provider Contact License</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Contact Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>