InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderContactLicense__c/fields/vlocity_ins__DEANumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DEANumber__c</fullName>
    <externalId>true</externalId>
    <label>DEA Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>