InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderContactLicense__c/fields/vlocity_ins__EnumerationCertifiedDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EnumerationCertifiedDate__c</fullName>
    <label>Enumeration Certified Date</label>
    <type>Date</type>
</CustomField>