InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderContactLicense__c/fields/vlocity_ins__IsPrimaryLicense__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsPrimaryLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary License</label>
    <type>Checkbox</type>
</CustomField>