InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderContactLicense__c/fields/vlocity_ins__LicenseCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LicenseCode__c</fullName>
    <label>License Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>