InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderContactLicense__c/fields/vlocity_ins__LicenseDescription__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LicenseDescription__c</fullName>
    <label>License Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>