InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderContactLicense__c/fields/vlocity_ins__LicneseDescription__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LicneseDescription__c</fullName>
    <description>DEPRECATED, Please use LicenseDescription__c</description>
    <label>License Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>