InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderContactLicense__c/fields/vlocity_ins__ProviderContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderContactId__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Provider Contact</relationshipLabel>
    <relationshipName>ProviderContact</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>