InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderContactLicense__c/recordTypes/vlocity_ins__Program.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Program</fullName>
    <active>true</active>
    <label>Program</label>
</RecordType>