InsuranceOrg/force-app/main/default/objects/vlocity_ins__ProviderContactLicense__c/recordTypes/vlocity_ins__Taxonomy.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Taxonomy</fullName>
    <active>true</active>
    <label>Taxonomy</label>
</RecordType>